--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,143 +1,110 @@
 .about-section {
-    max-width: 900px;
-    margin: 0 auto;
-    padding: 100px 0;
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 100px 0;
+}
+
+.inner {
+  display: grid;
+  grid-template-columns: 3fr 2fr;
+  gap: 50px;
+
+  @media (max-width: 768px) {
+    display: block;
   }
-  
-  .numbered-heading {
-    display: flex;
-    align-items: center;
+}
+
+.about-text {
+  p {
+    margin-bottom: 15px;
+  }
+}
+
+.skills-list {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(140px, 200px));
+  gap: 0 10px;
+  padding: 0;
+  margin: 20px 0 0 0;
+  overflow: hidden;
+  list-style: none;
+
+  li {
     position: relative;
-    margin: 10px 0 40px;
-    width: 100%;
-    font-size: clamp(26px, 5vw, 32px);
-    white-space: nowrap;
-  
+    margin-bottom: 10px;
+    padding-left: 20px;
+    font-family: var(--font-mono);
+    font-size: var(--fz-xs);
+
     &::before {
-      position: relative;
-      bottom: 4px;
-      counter-increment: section 1;
-      content: "0" counter(section) ".";
-      margin-right: 10px;
-      color: #64ffda;
-      font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", monospace;
-      font-size: clamp(16px, 3vw, 20px);
-      font-weight: 400;
-    }
-  
-    &::after {
-      content: "";
-      display: block;
-      position: relative;
-      top: -5px;
-      width: 300px;
-      height: 1px;
-      margin-left: 20px;
-      background-color: #233554;
+      content: '▹';
+      position: absolute;
+      left: 0;
+      color: var(--green);
+      font-size: var(--fz-sm);
+      line-height: 12px;
     }
   }
-  
-  .inner {
-    display: grid;
-    grid-template-columns: 3fr 2fr;
-    gap: 50px;
-  
-    @media (max-width: 768px) {
-      display: block;
-    }
+}
+
+.about-pic {
+  position: relative;
+  max-width: 300px;
+
+  @media (max-width: 768px) {
+    margin: 50px auto 0;
+    width: 70%;
   }
-  
-  .about-text {
-    p {
-      margin-bottom: 15px;
-    }
-  }
-  
-  .skills-list {
-    display: grid;
-    grid-template-columns: repeat(2, minmax(140px, 200px));
-    gap: 0 10px;
-    padding: 0;
-    margin: 20px 0 0 0;
-    overflow: hidden;
-    list-style: none;
-  
-    li {
-      position: relative;
-      margin-bottom: 10px;
-      padding-left: 20px;
-      font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", monospace;
-      font-size: 13px;
-  
-      &::before {
-        content: "▹";
-        position: absolute;
-        left: 0;
-        color: #64ffda;
-        font-size: 14px;
-        line-height: 12px;
-      }
-    }
-  }
-  
-  .about-pic {
+
+  .wrapper {
+    display: block;
     position: relative;
-    max-width: 300px;
-  
-    @media (max-width: 768px) {
-      margin: 50px auto 0;
-      width: 70%;
+    width: 100%;
+    border-radius: 4px;
+    background-color: var(--green);
+
+    &::before {
+      top: 20px;
+      left: 20px;
+      z-index: -1;
     }
-  
-    .wrapper {
+
+    &::after {
+      content: '';
       display: block;
-      position: relative;
+      position: absolute;
       width: 100%;
+      height: 100%;
       border-radius: 4px;
-      background-color: #64ffda;
-  
-      &::before {
-        top: 20px;
-        left: 20px;
-        z-index: -1;
-      }
-  
-      &::after {
-        content: "";
-        display: block;
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        border-radius: 4px;
-        transition: all 0.25s cubic-bezier(0.645,0.045,0.355,1);
-        border: 2px solid #64ffda;
-        top: 14px;
-        left: 14px;
-        z-index: -1;
-      }
-    }
-  
-    .img {
-      position: relative;
-      border-radius: 4px;
-      mix-blend-mode: multiply;
-      filter: grayscale(100%) contrast(1);
-      transition: all 0.25s cubic-bezier(0.645,0.045,0.355,1);
-    }
-  
-    &:hover,
-    &:focus {
-      background: transparent;
-      outline: 0;
-  
-      &::after {
-        top: 15px;
-        left: 15px;
-      }
-  
-      .img {
-        filter: none;
-        mix-blend-mode: normal;
-      }
+      transition: var(--transition);
+      border: 2px solid var(--green);
+      top: 14px;
+      left: 14px;
+      z-index: -1;
     }
   }
+
+  .img {
+    position: relative;
+    border-radius: 4px;
+    mix-blend-mode: multiply;
+    filter: grayscale(100%) contrast(1);
+    transition: var(--transition);
+  }
+
+  &:hover,
+  &:focus {
+    background: transparent;
+    outline: 0;
+
+    &::after {
+      top: 15px;
+      left: 15px;
+    }
+
+    .img {
+      filter: none;
+      mix-blend-mode: normal;
+    }
+  }
+}
