--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -25,6 +25,7 @@
   @media (max-width: 1080px) {
     padding: 0 40px;
   }
+
   @media (max-width: 768px) {
     padding: 0 25px;
   }
@@ -39,7 +40,7 @@
 
   .logo-text {
     font-size: 1.5rem;
-    font-family: 'SF Mono', 'Fira Code', 'Fira Mono', 'Roboto Mono', monospace;
+    font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", monospace;
   }
 }
 
@@ -95,7 +96,7 @@
   padding: 10px;
   margin: 0 5px;
   font-size: 13px;
-  font-family: 'SF Mono', 'Fira Code', 'Fira Mono', 'Roboto Mono', monospace;
+  font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", monospace;
   transition: color 0.3s ease;
 
   &:hover {
@@ -113,4 +114,3 @@
   margin-right: 5px;
   font-size: 12px;
 }
-
